--- a/indexHard.html
+++ b/indexHard.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <script src="./scriptHard.js"></script>
-    <script src = "./scriptjs.js"></script>
+    //<script src = "./scriptjs.js"></script>
 </body>
 </html>
